<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/bg_blur"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enter_your_email_id"
        android:id="@+id/enterEmailText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"/>

    <EditText
        android:id="@+id/emailIdEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:padding="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/enterEmailText"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enter_password"
        android:id="@+id/passwordTv"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/emailIdEt"

        android:layout_marginTop="60dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/password"
        android:layout_marginHorizontal="30dp"
        android:textSize="15sp"
        android:padding="5dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/passwordTv"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Login"
        android:text="@string/login"

        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>